# Infantry_2024_RMCV

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ArmoDetector.h  CameraHandler.h  CameraManager.h  Exception.h  ImageLoader.h  LoadMVCam.h
src/: ArmoDetector.cpp  Exception.cpp  ImageLoader.cpp
src/Camera/: CameraHandler.cpp  CameraManager.cpp  LoadMVCam.cpp
